# ECS

./: .gitignore  .vimrc  CMakeLists.txt  Makefile  README.md
src/: Blank.cpp  Component.h  Config.h.in  Entity.h
test/: TestChangeComponent.cpp  TestChangeComponent.h  TestComponent.cpp  TestComponent.h  TestECS.cpp  TestEntity.h  TestMessage.cpp  TestMessage.h  TestUpdate.cpp  TestUpdate.h  TestUpdateComponent.cpp  TestUpdateComponent.h
